# grub-theme

./: .env.example  .gitignore  README.en.md  README.md  README.zh.md  config.py  i18n.py  logging_setup.py  main.py  pyproject.toml
cli/: __init__.py  main.py
core/: __init__.py  models.py  theme_manager.py
gui/: __init__.py  base.py  tkinter_gui.py
locales/en_US/LC_MESSAGES/: grub-theme.po
locales/zh_CN/LC_MESSAGES/: grub-theme.po
scripts/: grub-theme-random.service  i18n_tools.py  install.sh
