[project]
name = "grub-theme"
version = "0.1.0"
description = "GRUB主题管理器 - 支持主题播放列表和随机切换"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "tkinterdnd2>=0.4.3",
]
authors = [
    {name = "grub-theme", email = "grub-theme@example.com"}
]
keywords = ["grub", "theme", "bootloader", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Boot",
    "Topic :: Utilities",
]

[project.scripts]
grub-theme = "main:main"


[project.urls]
Homepage = "https://github.com/mcallzbl/grub-theme"
Repository = "https://github.com/mcallzbl/grub-theme"
Issues = "https://github.com/mcallzbl/grub-theme/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
